--- a/AspireExtensions/Aspire.Hosting.AWS.LambdaEmulator/Components/_Imports.razor
+++ b/AspireExtensions/Aspire.Hosting.AWS.LambdaEmulator/Components/_Imports.razor
@@ -8,3 +8,7 @@
 @using Microsoft.JSInterop
 @using Aspire.Hosting.AWS.LambdaEmulator
 @using Aspire.Hosting.AWS.LambdaEmulator.Components
+
+@using Blazored
+@using Blazored.Modal
+@using Blazored.Modal.Services
